JUST-9: Changed to use SCSS.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="row mh-100 align-middle d-inline-block">
+      <img class="" alt="Shopping Cart1" src="../assets/shopping-cart-icon.svg" />
+    </div>
+  </app-root>
 </body>
 </html>
